2007-11-17  Milan Zamazal  <pdm@brailcom.org>

	* src/ttsapi/client.py (TCPConnection.say_text): Accept basestring
	as the `text' argument.

2007-10-17  Hynek Hanke  <hanke@syrr.buchal.name>

	* src/provider/drivers/driver.py: Moved from src/provider.

	* src/provider/drivers/festival.py: Moved from src/provider.

	* src/provider/drivers/sd_module.py: Moved from src/provider.

	* src/provider/driver.py: Moved to src/provider/drivers/driver.py

	* src/provider/sd_module.py: Moved to src/provider/drivers/

	* src/provider/festival.py: Moved to src/provider/drivers/
	
	* src/provider/configuration.py: Drivers moved to drivers/

	* doc/tts-api-provider.texi
	(Device Driver Implementation): New section.

2007-10-15  Hynek Hanke  <hanke@homer.brailcom.xx>

	* src/provider/festival.py (Core.__init__): Call super init()

2007-10-12  Hynek Hanke  <hanke@syrr.buchal.name>

	* doc/tts-api-provider.texi: @function -> @code, @textit -> @code

	* src/provider/driver.py (Core.register_callback): New function.

2007-10-12  Hynek Hanke  <hanke@syrr.buchal.name>
	
	* src/provider/sd_module.py: New file.

	* src/ttsapi/structures.py (Structure.__init__): Default
	value is now being copied, not assigned, to each new
	structure.

	* src/ttsapi/errors.py (ErrorDriverNotAvailable): New error class.

	* src/ttsapi/connection.py (PipeConnection._read_line): Raise
	IOError when 0 bytes is read.o

	* src/ttsapi/client.py (TCPConnection.__init__): Init
	of self._callbacks moved here from the class body.
	(TCPConnection.raise_event): Handle parameters of different
	events correctly.

	* src/provider/server.py (main): Added debug messages.

	* src/provider/provider.py (Provider.__init__): Append a unique
	string to every driver log filename.
	(Provider.__init__): Fallback on other available module if
	the default module is not available.

	* src/provider/festival.py (FestivalConnection.close): New function.
	(Core.quit): New function.
	(Core.drivers): Driver version incremented.